--- a/blog-listing.html
+++ b/blog-listing.html
@@ -30,22 +30,23 @@
                 <div class="line"></div>
             </label>
             <div class="logo">
-                <a href="/BMI/">
+                <a href="/">
                     <img src="./image/site-Logo.png" alt="Reymart-Logo" title="Reymart-Logo">
                 </a>
             </div>
             <div class="links">
-               <div class="main-links">
+                <div class="main-links">
                     <p><a href="/BMI/">Home</a></p>
-                    <p><a href="/BMI/about.html">About</a></p>
+                    <p><a href="/BMI/about.html">Catalogues</a></p>
                     <div class="dropdown-parent">
-                        <a href="#about"><span>Catalogues</span></a>
+                        <a href="#about"><span>Products</span></a>
                         <ul class="dropdown">
                             <li><a href="/BMI/listing-page.html">Product Page</a></li>
                             <li><a href="/BMI/detail-page.html">Detail Page</a></li>
                         </ul>
                     </div>
                     <p><a href="/BMI/blog-listing.html">Blog</a></p>
+                    <p><a href="/BMI/about.html">About Us</a></p>
                     <p><a href="/BMI/contact.html">Contact</a></p>
                 </div>
                 <div class="main-usersec">
@@ -58,7 +59,7 @@
                         </form>
                     </div>
                     <p class="d-lg-block d-none"><a href="#work"><i class="fa-solid fa-cart-shopping"></i></a></p>
-                    <p class="d-lg-block d-none"><a href="#work"><i class="fa-regular fa-heart"></i></a></p>
+                    <p class="d-lg-block d-none"><a href="#work"><i class="fa-solid fa-heart"></i></a></p>
                     <p class="login-link"><a href="#work">Login</a></p>
                     <p><a href="#work">Sign Up</a></p>
                 </div>
@@ -78,7 +79,10 @@
                 <div class="item">
                     <div class="row">
                         <div class="col-lg-6">
-                            <h5>Featured Blog</h5>
+                            <div class="d-flex justify-content-between align-items-center">
+                                <h5>Featured Blog</h5>
+                                <a href=""><i class="fa-solid fa-share-from-square"></i></a>
+                            </div>
                             <h2>Lorem ipsum dolor sit amet, consectetur dolor amet adipiscing elit. </h2>
                             <h6>By Admin | May 26, 2025</h6>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent et odio in est dictum
@@ -89,6 +93,9 @@
                         <div class="col-lg-6">
                             <a href="/BMI/blog-detail.html">
                                 <img src="./image/blog_listmain.png" alt="">
+                                <div class="blog_like">
+                                    <a href=""><i class="fa-solid fa-heart"></i></a>
+                                </div>
                             </a>
                         </div>
                     </div>
@@ -97,110 +104,10 @@
             </div>
         </div>
     </section>
-    <!-- Blog Content -->
-    <section class="listing_blogs">
-        <div class="container">
-            <h1>All Blogs</h1>
-            <div class="listing_allblog">
-                <!--  -->
-                <div class="row">
-                    <div class="col-lg-6 left">
-                        <a href="/BMI/blog-detail.html"><img src="./image/blog_listmain1.png" alt=""></a>
-                    </div>
-                    <div class="col-lg-6 right">
-                        <h5>Featured Blog</h5>
-                        <a href="/BMI/blog-detail.html">
-                            <h3>Lorem ipsum dolor sit amet, dolor sit consectetur adipiscing elit.</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent et odio in est dictum
-                                semper ut vitae leo. Vivamus venenatis efficitur purus, non convallis ipsum gravida et. 
-                            </p>
-                        </a>
-                    </div>
-                </div>
-                <!--  -->
-                <div class="row">
-                    <div class="col-lg-6 left">
-                        <a href="/BMI/blog-detail.html"><img src="./image/blog_listmain2.png" alt=""></a>
-                    </div>
-                    <div class="col-lg-6 right">
-                        <h5>Featured Blog</h5>
-                        <a href="/BMI/blog-detail.html">
-                            <h3>Lorem ipsum dolor sit amet, dolor sit consectetur adipiscing elit.</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent et odio in est dictum
-                                semper ut vitae leo. Vivamus venenatis efficitur purus, non convallis ipsum gravida et. 
-                            </p>
-                        </a>
-                    </div>
-                </div>
-                <!--  -->
-                <div class="row">
-                    <div class="col-lg-6 left">
-                        <a href="/BMI/blog-detail.html"><img src="./image/blog_listmain3.png" alt=""></a>
-                    </div>
-                    <div class="col-lg-6 right">
-                        <h5>Featured Blog</h5>
-                        <a href="/BMI/blog-detail.html">
-                            <h3>Lorem ipsum dolor sit amet, dolor sit consectetur adipiscing elit.</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent et odio in est dictum
-                                semper ut vitae leo. Vivamus venenatis efficitur purus, non convallis ipsum gravida et. 
-                            </p>
-                        </a>
-                    </div>
-                </div>
-                <!--  -->
-                <div class="row">
-                    <div class="col-lg-6 left">
-                        <a href="/BMI/blog-detail.html"><img src="./image/blog_listmain4.png" alt=""></a>
-                    </div>
-                    <div class="col-lg-6 right">
-                        <h5>Featured Blog</h5>
-                        <a href="/BMI/blog-detail.html">
-                            <h3>Lorem ipsum dolor sit amet, dolor sit consectetur adipiscing elit.</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent et odio in est dictum
-                                semper ut vitae leo. Vivamus venenatis efficitur purus, non convallis ipsum gravida et. 
-                            </p>
-                        </a>
-                    </div>
-                </div>
-                <!--  -->
-                <div class="row">
-                    <div class="col-lg-6 left">
-                        <a href="/BMI/blog-detail.html"><img src="./image/blog_listmain1.png" alt=""></a>
-                    </div>
-                    <div class="col-lg-6 right">
-                        <h5>Featured Blog</h5>
-                        <a href="/BMI/blog-detail.html">
-                            <h3>Lorem ipsum dolor sit amet, dolor sit consectetur adipiscing elit.</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent et odio in est dictum
-                                semper ut vitae leo. Vivamus venenatis efficitur purus, non convallis ipsum gravida et. 
-                            </p>
-                        </a>
-                    </div>
-                </div>
-                <!--  -->
-                <div class="row">
-                    <div class="col-lg-6 left">
-                        <a href="/BMI/blog-detail.html"><img src="./image/blog_listmain2.png" alt=""></a>
-                    </div>
-                    <div class="col-lg-6 right">
-                        <h5>Featured Blog</h5>
-                        <a href="/BMI/blog-detail.html">
-                            <h3>Lorem ipsum dolor sit amet, dolor sit consectetur adipiscing elit.</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent et odio in est dictum
-                                semper ut vitae leo. Vivamus venenatis efficitur purus, non convallis ipsum gravida et. 
-                            </p>
-                        </a>
-                    </div>
-                </div>
-                <!--  -->
-            </div>
-            <div id="pagination" class="pagination"></div>
-        </div>
-    </section>
     <!-- Blog Category -->
-    <section class="blog_category">
+    <section class="blog_category pt-0">
         <div class="container">
-            <h2>All Categories</h2>
+            <h2 class="text-center">All Categories</h2>
             <div class="row ">
                 <!--  -->
                 <div class="item">
@@ -228,6 +135,160 @@
                 </div>
                 <!--  -->
             </div>
+        </div>
+    </section>
+    <!-- Blog Content -->
+    <section class="listing_blogs">
+        <div class="container">
+            <h1>All Blogs</h1>
+            <div class="listing_allblog">
+                <!--  -->
+                <div class="row">
+                    <div class="col-lg-6 left">
+                        <a href="/BMI/blog-detail.html"><img src="./image/blog_listmain1.png" alt=""></a>
+                        <div class="blog_like">
+                            <a href=""><i class="fa-solid fa-heart"></i></a>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 right">
+                        <div class="d-fllex">
+
+                        </div>
+                        <div class="d-flex justify-content-between align-items-center">
+                            <h5>Featured Blog</h5>
+                            <a href=""><i class="fa-solid fa-share-from-square"></i></a>
+                        </div>
+                        <a href="/BMI/blog-detail.html">
+                            <h3>Lorem ipsum dolor sit amet, dolor sit consectetur adipiscing elit.</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent et odio in est dictum
+                                semper ut vitae leo. Vivamus venenatis efficitur purus, non convallis ipsum gravida et. 
+                            </p>
+                        </a>
+                    </div>
+                </div>
+                <!--  -->
+                <div class="row">
+                    <div class="col-lg-6 left">
+                        <a href="/BMI/blog-detail.html"><img src="./image/blog_listmain2.png" alt=""></a>
+                        <div class="blog_like">
+                            <a href=""><i class="fa-solid fa-heart"></i></a>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 right">
+                        <div class="d-fllex">
+
+                        </div>
+                        <div class="d-flex justify-content-between align-items-center">
+                            <h5>Featured Blog</h5>
+                            <a href=""><i class="fa-solid fa-share-from-square"></i></a>
+                        </div>
+                        <a href="/BMI/blog-detail.html">
+                            <h3>Lorem ipsum dolor sit amet, dolor sit consectetur adipiscing elit.</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent et odio in est dictum
+                                semper ut vitae leo. Vivamus venenatis efficitur purus, non convallis ipsum gravida et. 
+                            </p>
+                        </a>
+                    </div>
+                </div>
+                <!--  -->
+                <div class="row">
+                    <div class="col-lg-6 left">
+                        <a href="/BMI/blog-detail.html"><img src="./image/blog_listmain3.png" alt=""></a>
+                        <div class="blog_like">
+                            <a href=""><i class="fa-solid fa-heart"></i></a>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 right">
+                        <div class="d-fllex">
+
+                        </div>
+                        <div class="d-flex justify-content-between align-items-center">
+                            <h5>Featured Blog</h5>
+                            <a href=""><i class="fa-solid fa-share-from-square"></i></a>
+                        </div>
+                        <a href="/BMI/blog-detail.html">
+                            <h3>Lorem ipsum dolor sit amet, dolor sit consectetur adipiscing elit.</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent et odio in est dictum
+                                semper ut vitae leo. Vivamus venenatis efficitur purus, non convallis ipsum gravida et. 
+                            </p>
+                        </a>
+                    </div>
+                </div>
+                <!--  -->
+                <div class="row">
+                    <div class="col-lg-6 left">
+                        <a href="/BMI/blog-detail.html"><img src="./image/blog_listmain4.png" alt=""></a>
+                        <div class="blog_like">
+                            <a href=""><i class="fa-solid fa-heart"></i></a>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 right">
+                        <div class="d-fllex">
+
+                        </div>
+                        <div class="d-flex justify-content-between align-items-center">
+                            <h5>Featured Blog</h5>
+                            <a href=""><i class="fa-solid fa-share-from-square"></i></a>
+                        </div>
+                        <a href="/BMI/blog-detail.html">
+                            <h3>Lorem ipsum dolor sit amet, dolor sit consectetur adipiscing elit.</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent et odio in est dictum
+                                semper ut vitae leo. Vivamus venenatis efficitur purus, non convallis ipsum gravida et. 
+                            </p>
+                        </a>
+                    </div>
+                </div>
+                <!--  -->
+                <div class="row">
+                    <div class="col-lg-6 left">
+                        <a href="/BMI/blog-detail.html"><img src="./image/blog_listmain1.png" alt=""></a>
+                        <div class="blog_like">
+                            <a href=""><i class="fa-solid fa-heart"></i></a>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 right">
+                        <div class="d-fllex">
+
+                        </div>
+                        <div class="d-flex justify-content-between align-items-center">
+                            <h5>Featured Blog</h5>
+                            <a href=""><i class="fa-solid fa-share-from-square"></i></a>
+                        </div>
+                        <a href="/BMI/blog-detail.html">
+                            <h3>Lorem ipsum dolor sit amet, dolor sit consectetur adipiscing elit.</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent et odio in est dictum
+                                semper ut vitae leo. Vivamus venenatis efficitur purus, non convallis ipsum gravida et. 
+                            </p>
+                        </a>
+                    </div>
+                </div>
+                <!--  -->
+                <div class="row">
+                    <div class="col-lg-6 left">
+                        <a href="/BMI/blog-detail.html"><img src="./image/blog_listmain2.png" alt=""></a>
+                        <div class="blog_like">
+                            <a href=""><i class="fa-solid fa-heart"></i></a>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 right">
+                        <div class="d-fllex">
+
+                        </div>
+                        <div class="d-flex justify-content-between align-items-center">
+                            <h5>Featured Blog</h5>
+                            <a href=""><i class="fa-solid fa-share-from-square"></i></a>
+                        </div>
+                        <a href="/BMI/blog-detail.html">
+                            <h3>Lorem ipsum dolor sit amet, dolor sit consectetur adipiscing elit.</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent et odio in est dictum
+                                semper ut vitae leo. Vivamus venenatis efficitur purus, non convallis ipsum gravida et. 
+                            </p>
+                        </a>
+                    </div>
+                </div>
+                <!--  -->
+            </div>
+            <div id="pagination" class="pagination"></div>
         </div>
     </section>
     <!-- Get a quote -->
