--- a/contact.html
+++ b/contact.html
@@ -30,22 +30,23 @@
                 <div class="line"></div>
             </label>
             <div class="logo">
-                <a href="/BMI/">
+                <a href="/">
                     <img src="./image/site-Logo.png" alt="Reymart-Logo" title="Reymart-Logo">
                 </a>
             </div>
             <div class="links">
                 <div class="main-links">
                     <p><a href="/BMI/">Home</a></p>
-                    <p><a href="/BMI/about.html">About</a></p>
+                    <p><a href="/BMI/about.html">Catalogues</a></p>
                     <div class="dropdown-parent">
-                        <a href="#about"><span>Catalogues</span></a>
+                        <a href="#about"><span>Products</span></a>
                         <ul class="dropdown">
                             <li><a href="/BMI/listing-page.html">Product Page</a></li>
                             <li><a href="/BMI/detail-page.html">Detail Page</a></li>
                         </ul>
                     </div>
                     <p><a href="/BMI/blog-listing.html">Blog</a></p>
+                    <p><a href="/BMI/about.html">About Us</a></p>
                     <p><a href="/BMI/contact.html">Contact</a></p>
                 </div>
                 <div class="main-usersec">
@@ -114,12 +115,12 @@
                     <div class="form_flex">
                         <div class="form-group">
                             <label for="Email*">Business Name </label>
-                            <input type="email" class="form-control" placeholder="Enter Your Business Name">
+                            <input type="email" class="form-control" placeholder="Enter Business name">
                         </div>
                         <!--  -->
                         <div class="form-group">
-                            <label for="Phone Number">Business Address</label>
-                            <input type="tel" class="form-control" placeholder="Enter Your Business Address">
+                            <label for="Phone Number">Business Email Address</label>
+                            <input type="tel" class="form-control" placeholder="Enter Business Email Address">
                         </div>
                     </div>
                     <!--  -->
