--- a/index.html
+++ b/index.html
@@ -30,24 +30,25 @@
 				<div class="line"></div>
 			</label>
 			<div class="logo">
-				<a href="/BMI/">
+				<a href="/">
 					<img src="./image/site-Logo.png" alt="Reymart-Logo" title="Reymart-Logo">
 				</a>
 			</div>
 			<div class="links">
 				<div class="main-links">
-                    <p><a href="/BMI/">Home</a></p>
-                    <p><a href="/BMI/about.html">About</a></p>
-                    <div class="dropdown-parent">
-                        <a href="#about"><span>Catalogues</span></a>
-                        <ul class="dropdown">
-                            <li><a href="/BMI/listing-page.html">Product Page</a></li>
-                            <li><a href="/BMI/detail-page.html">Detail Page</a></li>
-                        </ul>
-                    </div>
-                    <p><a href="/BMI/blog-listing.html">Blog</a></p>
-                    <p><a href="/BMI/contact.html">Contact</a></p>
-                </div>
+					<p><a href="/BMI/">Home</a></p>
+					<p><a href="/BMI/about.html">Catalogues</a></p>
+					<div class="dropdown-parent">
+						<a href="#about"><span>Products</span></a>
+						<ul class="dropdown">
+							<li><a href="/BMI/listing-page.html">Product Page</a></li>
+							<li><a href="/BMI/detail-page.html">Detail Page</a></li>
+						</ul>
+					</div>
+					<p><a href="/BMI/blog-listing.html">Blog</a></p>
+					<p><a href="/BMI/about.html">About Us</a></p>
+					<p><a href="/BMI/contact.html">Contact</a></p>
+				</div>
 				<div class="main-usersec">
 					<div class="search_head">
 						<form action="">
@@ -72,29 +73,50 @@
 	</header>
 	<!-- Main Section start -->
 	<section class="banner-section pb-0">
-		<div class="banner-main">
-			<img class="desktop d-md-block d-none" src="./image/banner.png" alt="">
-			<img class="mobile d-md-none" src="./image/home_mobile.png" alt="">
-			<div class="banner_content">
-				<h4><span>Decorative interiors</span></h4>
-				<h1>Global sourcing partner for custom homeware solutions</h1>
-				<p>BMI is a global sourcing partner that discovers, designs, and manufactures homeware in
-					collaboration
-					with exclusive factory partners.</p>
-				<p class="common-btn"><a href="">Explore More</a></p>
+		<div class="homebanner_slider owl-carousel owl-theme">
+			<!--  -->
+			<div class="item">
+				<div class="banner-main">
+					<img class="desktop d-md-block d-none" src="./image/banner.png" alt="">
+					<img class="mobile d-md-none" src="./image/home_mobile.png" alt="">
+					<div class="banner_content">
+						<h4><span>Decorative interiors</span></h4>
+						<h1>Global sourcing partner for custom homeware solutions</h1>
+						<p>BMI is a global sourcing partner that discovers, designs, and manufactures homeware in
+							collaboration
+							with exclusive factory partners.</p>
+						<p class="common-btn"><a href="">Explore More</a></p>
+					</div>
+				</div>
 			</div>
+			<!--  -->
+			<div class="item">
+				<div class="banner-main">
+					<img class="desktop d-md-block d-none" src="./image/banner.png" alt="">
+					<img class="mobile d-md-none" src="./image/home_mobile.png" alt="">
+					<div class="banner_content">
+						<h4><span>Decorative interiors</span></h4>
+						<h1>Global sourcing partner for custom homeware solutions</h1>
+						<p>BMI is a global sourcing partner that discovers, designs, and manufactures homeware in
+							collaboration
+							with exclusive factory partners.</p>
+						<p class="common-btn"><a href="">Explore More</a></p>
+					</div>
+				</div>
+			</div>
+			<!--  -->
 		</div>
 	</section>
 	<!-- Latest categories -->
 	<section class="section_bg categories_sec">
 		<div class="container">
 			<div class="main_subtitle">
-				<h2 class="subheading">Latest Catalogues</h2>
 				<p class="subtext">We are manufacturers and exporters of premium home decor products, including
 					planters, lanterns,
 					pots, platters, candle stands, bowls, tableware, and more.</p>
+				<h2 class="subheading">Latest Catalogues</h2>
 			</div>
-			<div class="category_main row mt-5">
+			<div class="category_main row mt-3">
 				<div class="col-lg-6 category_innr1">
 					<img src="./image/catealog-1.png" alt="">
 					<div class="category_manifact">
@@ -135,7 +157,7 @@
 					planters, lanterns,
 					pots, platters, candle stands, bowls, tableware, and more.</p>
 			</div>
-			<div class="catergory_row">
+			<div class="catergory_row owl-carousel owl-theme">
 				<!--  -->
 				<div class="collect_items">
 					<a href="">
@@ -580,12 +602,6 @@
 				</div>
 				<div class="col-lg-6">
 					<div class="certificate_slide owl-carousel owl-theme">
-						<div class="item">
-							<img src="./image/certificate.png" alt="">
-						</div>
-						<div class="item">
-							<img src="./image/certificate.png" alt="">
-						</div>
 						<div class="item">
 							<img src="./image/certificate.png" alt="">
 						</div>
