--- a/listing-page.html
+++ b/listing-page.html
@@ -30,22 +30,23 @@
                 <div class="line"></div>
             </label>
             <div class="logo">
-                <a href="/BMI/">
+                <a href="/">
                     <img src="./image/site-Logo.png" alt="Reymart-Logo" title="Reymart-Logo">
                 </a>
             </div>
             <div class="links">
                 <div class="main-links">
                     <p><a href="/BMI/">Home</a></p>
-                    <p><a href="/BMI/about.html">About</a></p>
+                    <p><a href="/BMI/about.html">Catalogues</a></p>
                     <div class="dropdown-parent">
-                        <a href="#about"><span>Catalogues</span></a>
+                        <a href="#about"><span>Products</span></a>
                         <ul class="dropdown">
                             <li><a href="/BMI/listing-page.html">Product Page</a></li>
                             <li><a href="/BMI/detail-page.html">Detail Page</a></li>
                         </ul>
                     </div>
                     <p><a href="/BMI/blog-listing.html">Blog</a></p>
+                    <p><a href="/BMI/about.html">About Us</a></p>
                     <p><a href="/BMI/contact.html">Contact</a></p>
                 </div>
                 <div class="main-usersec">
@@ -87,12 +88,12 @@
     <section class="section_bg categories_sec">
         <div class="container">
             <div class="main_subtitle">
-                <h2 class="subheading">Our Products</h2>
+                <!-- <h2 class="subheading">Our Products</h2> -->
                 <p class="subtext mb-3">We are manufacturers and exporters of premium home decor products, including
                     planters, lanterns,
                     pots, platters, candle stands, bowls, tableware, and more.</p>
             </div>
-            <div class="collection_main row">
+            <div class="collection_main row mt-5">
                 <!--  -->
                 <div class="collect_item">
                     <a href="/BMI/detail-page.html">
@@ -111,7 +112,25 @@
 
                         </div>
                     </a>
-                    <h3>FL-57 Set Ebony Grace Jar Set</h3>
+                    <div class="listing_detail">
+                        <h3>FL-57 Set Ebony Grace Jar Set</h3>
+                        <div class="listing_quality">
+                            <a href=""> <i class="fa-solid fa-heart"></i></a>
+
+                            <div class="product_listshare">
+                               <i class="fa-solid fa-share share"></i> <!-- Added 'share' class -->
+                                <ul class="social">
+                                    <li><a href="#" target="_blank" title="facebook"><i
+                                                class="fa-brands fa-square-facebook"></i></a></li>
+                                    <li><a href="#" target="_blank" title="twitter"><i
+                                                class="fa-brands fa-x-twitter"></i></a></li>
+                                    <li><a href="#" target="_blank" title="linkedin"><i
+                                                class="fa-brands fa-linkedin-in"></i></a></li>
+                                </ul>
+                            </div>
+                            <!--  -->
+                        </div>
+                    </div>
                 </div>
                 <!--  -->
                 <div class="collect_item">
@@ -130,7 +149,25 @@
                             </div>
                         </div>
                     </a>
-                    <h3>FL-58 Timber-Edged</h3>
+                    <div class="listing_detail">
+                        <h3>FL-58 Set Ebony Grace Jar Set</h3>
+                        <div class="listing_quality">
+                            <a href=""> <i class="fa-solid fa-heart"></i></a>
+
+                            <div class="product_listshare">
+                               <i class="fa-solid fa-share share"></i> <!-- Added 'share' class -->
+                                <ul class="social">
+                                    <li><a href="#" target="_blank" title="facebook"><i
+                                                class="fa-brands fa-square-facebook"></i></a></li>
+                                    <li><a href="#" target="_blank" title="twitter"><i
+                                                class="fa-brands fa-x-twitter"></i></a></li>
+                                    <li><a href="#" target="_blank" title="linkedin"><i
+                                                class="fa-brands fa-linkedin-in"></i></a></li>
+                                </ul>
+                            </div>
+                            <!--  -->
+                        </div>
+                    </div>
                 </div>
                 <!--  -->
                 <div class="collect_item">
@@ -149,7 +186,25 @@
                             </div>
                         </div>
                     </a>
-                    <h3>FL-55 Set Frosty Delight Jar Set</h3>
+                    <div class="listing_detail">
+                        <h3>FL-55 Set Ebony Grace Jar Set</h3>
+                        <div class="listing_quality">
+                            <a href=""> <i class="fa-solid fa-heart"></i></a>
+
+                            <div class="product_listshare">
+                               <i class="fa-solid fa-share share"></i> <!-- Added 'share' class -->
+                                <ul class="social">
+                                    <li><a href="#" target="_blank" title="facebook"><i
+                                                class="fa-brands fa-square-facebook"></i></a></li>
+                                    <li><a href="#" target="_blank" title="twitter"><i
+                                                class="fa-brands fa-x-twitter"></i></a></li>
+                                    <li><a href="#" target="_blank" title="linkedin"><i
+                                                class="fa-brands fa-linkedin-in"></i></a></li>
+                                </ul>
+                            </div>
+                            <!--  -->
+                        </div>
+                    </div>
                 </div>
                 <!--  -->
                 <div class="collect_item">
@@ -168,7 +223,25 @@
                             </div>
                         </div>
                     </a>
-                    <h3>FL-56 Midnight Reverie Jar</h3>
+                    <div class="listing_detail">
+                        <h3>FL-59 Set Ebony Grace Jar Set</h3>
+                        <div class="listing_quality">
+                            <a href=""> <i class="fa-solid fa-heart"></i></a>
+
+                            <div class="product_listshare">
+                               <i class="fa-solid fa-share share"></i> <!-- Added 'share' class -->
+                                <ul class="social">
+                                    <li><a href="#" target="_blank" title="facebook"><i
+                                                class="fa-brands fa-square-facebook"></i></a></li>
+                                    <li><a href="#" target="_blank" title="twitter"><i
+                                                class="fa-brands fa-x-twitter"></i></a></li>
+                                    <li><a href="#" target="_blank" title="linkedin"><i
+                                                class="fa-brands fa-linkedin-in"></i></a></li>
+                                </ul>
+                            </div>
+                            <!--  -->
+                        </div>
+                    </div>
                 </div>
                 <!--  -->
                 <div class="collect_item">
@@ -188,7 +261,26 @@
 
                         </div>
                     </a>
-                    <h3>FL-57 Set Ebony Grace Jar Set</h3>
+
+                    <div class="listing_detail">
+                        <h3>FL-60 Set Ebony Grace Jar Set</h3>
+                        <div class="listing_quality">
+                            <a href=""> <i class="fa-solid fa-heart"></i></a>
+
+                            <div class="product_listshare">
+                               <i class="fa-solid fa-share share"></i> <!-- Added 'share' class -->
+                                <ul class="social">
+                                    <li><a href="#" target="_blank" title="facebook"><i
+                                                class="fa-brands fa-square-facebook"></i></a></li>
+                                    <li><a href="#" target="_blank" title="twitter"><i
+                                                class="fa-brands fa-x-twitter"></i></a></li>
+                                    <li><a href="#" target="_blank" title="linkedin"><i
+                                                class="fa-brands fa-linkedin-in"></i></a></li>
+                                </ul>
+                            </div>
+                            <!--  -->
+                        </div>
+                    </div>
                 </div>
                 <!--  -->
                 <div class="collect_item">
@@ -207,7 +299,26 @@
                             </div>
                         </div>
                     </a>
-                    <h3>FL-58 Timber-Edged</h3>
+
+                    <div class="listing_detail">
+                        <h3>FL-58 Timber-Edged</h3>
+                        <div class="listing_quality">
+                            <a href=""> <i class="fa-solid fa-heart"></i></a>
+
+                            <div class="product_listshare">
+                               <i class="fa-solid fa-share share"></i> <!-- Added 'share' class -->
+                                <ul class="social">
+                                    <li><a href="#" target="_blank" title="facebook"><i
+                                                class="fa-brands fa-square-facebook"></i></a></li>
+                                    <li><a href="#" target="_blank" title="twitter"><i
+                                                class="fa-brands fa-x-twitter"></i></a></li>
+                                    <li><a href="#" target="_blank" title="linkedin"><i
+                                                class="fa-brands fa-linkedin-in"></i></a></li>
+                                </ul>
+                            </div>
+                            <!--  -->
+                        </div>
+                    </div>
                 </div>
                 <!--  -->
                 <div class="collect_item">
@@ -226,7 +337,26 @@
                             </div>
                         </div>
                     </a>
-                    <h3>FL-59 Set Frosty Delight Jar Set</h3>
+
+                    <div class="listing_detail">
+                        <h3>FL-59 Set Frosty Delight Jar Set</h3>
+                        <div class="listing_quality">
+                            <a href=""> <i class="fa-solid fa-heart"></i></a>
+
+                            <div class="product_listshare">
+                               <i class="fa-solid fa-share share"></i> <!-- Added 'share' class -->
+                                <ul class="social">
+                                    <li><a href="#" target="_blank" title="facebook"><i
+                                                class="fa-brands fa-square-facebook"></i></a></li>
+                                    <li><a href="#" target="_blank" title="twitter"><i
+                                                class="fa-brands fa-x-twitter"></i></a></li>
+                                    <li><a href="#" target="_blank" title="linkedin"><i
+                                                class="fa-brands fa-linkedin-in"></i></a></li>
+                                </ul>
+                            </div>
+                            <!--  -->
+                        </div>
+                    </div>
                 </div>
                 <!--  -->
                 <div class="collect_item">
@@ -245,7 +375,26 @@
                             </div>
                         </div>
                     </a>
-                    <h3>FL-60 Midnight Reverie Jar</h3>
+
+                    <div class="listing_detail">
+                        <h3>FL-60 Midnight Reverie Jar</h3>
+                        <div class="listing_quality">
+                            <a href=""> <i class="fa-solid fa-heart"></i></a>
+
+                            <div class="product_listshare">
+                               <i class="fa-solid fa-share share"></i> <!-- Added 'share' class -->
+                                <ul class="social">
+                                    <li><a href="#" target="_blank" title="facebook"><i
+                                                class="fa-brands fa-square-facebook"></i></a></li>
+                                    <li><a href="#" target="_blank" title="twitter"><i
+                                                class="fa-brands fa-x-twitter"></i></a></li>
+                                    <li><a href="#" target="_blank" title="linkedin"><i
+                                                class="fa-brands fa-linkedin-in"></i></a></li>
+                                </ul>
+                            </div>
+                            <!--  -->
+                        </div>
+                    </div>
                 </div>
                 <!--  -->
                 <div class="collect_item">
@@ -265,7 +414,25 @@
 
                         </div>
                     </a>
-                    <h3>FL-57 Set Ebony Grace Jar Set</h3>
+                    <div class="listing_detail">
+                        <h3>FL-57 Set Ebony Grace Jar Set</h3>
+                        <div class="listing_quality">
+                            <a href=""> <i class="fa-solid fa-heart"></i></a>
+
+                            <div class="product_listshare">
+                               <i class="fa-solid fa-share share"></i> <!-- Added 'share' class -->
+                                <ul class="social">
+                                    <li><a href="#" target="_blank" title="facebook"><i
+                                                class="fa-brands fa-square-facebook"></i></a></li>
+                                    <li><a href="#" target="_blank" title="twitter"><i
+                                                class="fa-brands fa-x-twitter"></i></a></li>
+                                    <li><a href="#" target="_blank" title="linkedin"><i
+                                                class="fa-brands fa-linkedin-in"></i></a></li>
+                                </ul>
+                            </div>
+                            <!--  -->
+                        </div>
+                    </div>
                 </div>
                 <!--  -->
                 <div class="collect_item">
@@ -284,7 +451,25 @@
                             </div>
                         </div>
                     </a>
-                    <h3>FL-58 Timber-Edged</h3>
+                    <div class="listing_detail">
+                        <h3>FL-58 Timber-Edged</h3>
+                        <div class="listing_quality">
+                            <a href=""> <i class="fa-solid fa-heart"></i></a>
+
+                            <div class="product_listshare">
+                               <i class="fa-solid fa-share share"></i> <!-- Added 'share' class -->
+                                <ul class="social">
+                                    <li><a href="#" target="_blank" title="facebook"><i
+                                                class="fa-brands fa-square-facebook"></i></a></li>
+                                    <li><a href="#" target="_blank" title="twitter"><i
+                                                class="fa-brands fa-x-twitter"></i></a></li>
+                                    <li><a href="#" target="_blank" title="linkedin"><i
+                                                class="fa-brands fa-linkedin-in"></i></a></li>
+                                </ul>
+                            </div>
+                            <!--  -->
+                        </div>
+                    </div>
                 </div>
                 <!--  -->
                 <div class="collect_item">
@@ -303,7 +488,25 @@
                             </div>
                         </div>
                     </a>
-                    <h3>FL-55 Set Frosty Delight Jar Set</h3>
+                    <div class="listing_detail">
+                        <h3>FL-55 Set Frosty Delight Jar Set</h3>
+                        <div class="listing_quality">
+                            <a href=""> <i class="fa-solid fa-heart"></i></a>
+
+                            <div class="product_listshare">
+                               <i class="fa-solid fa-share share"></i> <!-- Added 'share' class -->
+                                <ul class="social">
+                                    <li><a href="#" target="_blank" title="facebook"><i
+                                                class="fa-brands fa-square-facebook"></i></a></li>
+                                    <li><a href="#" target="_blank" title="twitter"><i
+                                                class="fa-brands fa-x-twitter"></i></a></li>
+                                    <li><a href="#" target="_blank" title="linkedin"><i
+                                                class="fa-brands fa-linkedin-in"></i></a></li>
+                                </ul>
+                            </div>
+                            <!--  -->
+                        </div>
+                    </div>
                 </div>
                 <!--  -->
                 <div class="collect_item">
@@ -322,7 +525,25 @@
                             </div>
                         </div>
                     </a>
-                    <h3>FL-56 Midnight Reverie Jar</h3>
+                    <div class="listing_detail">
+                        <h3>FL-55 Set Frosty Delight Jar Set</h3>
+                        <div class="listing_quality">
+                            <a href=""> <i class="fa-solid fa-heart"></i></a>
+
+                            <div class="product_listshare">
+                               <i class="fa-solid fa-share share"></i> <!-- Added 'share' class -->
+                                <ul class="social">
+                                    <li><a href="#" target="_blank" title="facebook"><i
+                                                class="fa-brands fa-square-facebook"></i></a></li>
+                                    <li><a href="#" target="_blank" title="twitter"><i
+                                                class="fa-brands fa-x-twitter"></i></a></li>
+                                    <li><a href="#" target="_blank" title="linkedin"><i
+                                                class="fa-brands fa-linkedin-in"></i></a></li>
+                                </ul>
+                            </div>
+                            <!--  -->
+                        </div>
+                    </div>
                 </div>
                 <!--  -->
                 <div class="collect_item">
